--- a/styles.css
+++ b/styles.css
@@ -5,10 +5,6 @@ html, body, header, nav, aside, section, footer, div {
 }
 
 
-
-
-
-
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
@@ -46,7 +42,9 @@ body {
 .nav a {
     color: #fff;
     text-decoration: none;
-    margin: 0 10px;
+    margin: .5rem;
+    padding: .5rem;
+
 }
 
 
@@ -79,3 +77,9 @@ footer img {
     margin: 0 auto;
     max-width: 100%;
 }
+.responsive-img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Center the image */
+  }
