--- a/styles.css
+++ b/styles.css
@@ -76,4 +76,32 @@ footer {
     background-color: rgb(115, 162, 162);
     color: rgb(10, 9, 9);
 }
-      
+@media only screen and (orientation: portrait) and (width < 768px) {
+    .right-side {
+        display: none;
+    }
+    .left-side {
+        width: 100%;
+        margin: 0 12%;
+    }
+}
+
+@media only screen and (orientation: landscape) and (width < 1024px) {
+    .right-side {
+        display: none;
+    }
+    .left-side {
+        width: 100%;
+        margin: 0 12%;
+    }
+}
+@media print {
+    body {
+       font-size: 12px;
+       line-height: 1.6;
+    }
+
+    .print-header {
+        display: block;
+    }
+}
